Restrict read_repo_file to repo scope

--- a/notebooks/02_tools_and_reasoning.ipynb
+++ b/notebooks/02_tools_and_reasoning.ipynb
@@ -32,7 +32,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "def basic_calculator(operation: str, a: float, b: float) -> str:\n    \"\"\"Deterministic math helper that supports +, -, *, and /.\"\"\"\n    if operation not in {\"add\", \"subtract\", \"multiply\", \"divide\"}:\n        return f\"Unsupported operation: {operation}\"\n\n    if operation == \"add\":\n        value = a + b\n    elif operation == \"subtract\":\n        value = a - b\n    elif operation == \"multiply\":\n        value = a * b\n    else:\n        if b == 0:\n            return \"Cannot divide by zero.\"\n        value = a / b\n\n    return f\"{value:.4f}\"\n\n\nMAX_FILE_CHARS = 600\n\n\ndef read_repo_file(relative_path: str) -> str:\n    \"\"\"Return a trimmed excerpt from a text file inside the repo.\"\"\"\n    target = (REPO_ROOT / relative_path).resolve()\n    try:\n        text = target.read_text(encoding=\"utf-8\")\n    except FileNotFoundError:\n        return f\"File {relative_path} was not found.\"\n    except UnicodeDecodeError:\n        return f\"File {relative_path} is not plain text.\"\n\n    return text[:MAX_FILE_CHARS]"
+   "source": [
+    "def basic_calculator(operation: str, a: float, b: float) -> str:\n",
+    "    \"\"\"Deterministic math helper that supports +, -, *, and /.\"\"\"\n",
+    "    if operation not in {\"add\", \"subtract\", \"multiply\", \"divide\"}:\n",
+    "        return f\"Unsupported operation: {operation}\"\n",
+    "\n",
+    "    if operation == \"add\":\n",
+    "        value = a + b\n",
+    "    elif operation == \"subtract\":\n",
+    "        value = a - b\n",
+    "    elif operation == \"multiply\":\n",
+    "        value = a * b\n",
+    "    else:\n",
+    "        if b == 0:\n",
+    "            return \"Cannot divide by zero.\"\n",
+    "        value = a / b\n",
+    "\n",
+    "    return f\"{value:.4f}\"\n",
+    "\n",
+    "\n",
+    "MAX_FILE_CHARS = 600\n",
+    "\n",
+    "\n",
+    "def read_repo_file(relative_path: str) -> str:\n",
+    "    \"\"\"Return a trimmed excerpt from a text file inside the repo.\"\"\"\n",
+    "    repo_root = REPO_ROOT.resolve()\n",
+    "    target = (repo_root / relative_path).resolve()\n",
+    "\n",
+    "    if not target.is_relative_to(repo_root):\n",
+    "        return \"Only files within this repository can be read.\"\n",
+    "\n",
+    "    try:\n",
+    "        text = target.read_text(encoding=\"utf-8\")\n",
+    "    except FileNotFoundError:\n",
+    "        return f\"File {relative_path} was not found.\"\n",
+    "    except UnicodeDecodeError:\n",
+    "        return f\"File {relative_path} is not plain text.\"\n",
+    "\n",
+    "    return text[:MAX_FILE_CHARS]\n"
+   ]
   },
   {
    "cell_type": "code",
