Clean up basic Responses API chatbot notebook with model selector and .env handling

--- a/notebooks/01_basic_chatbot.ipynb
+++ b/notebooks/01_basic_chatbot.ipynb
@@ -5,167 +5,358 @@
    "id": "0406aa11-15fc-4706-ae4f-53760bb18929",
    "metadata": {},
    "source": [
-    "# 🤖 Build Your First Basic Chatbot with the OpenAI Responses API\r\n",
-    "\r\n",
-    "Welcome! In this notebook, we're going to show you how to talk to a powerful AI model using **OpenAI's Responses API**.\r\n",
-    "\r\n",
-    "This will be like texting a super-smart assistant — and we'll explain each step like you're 5 years old (ELI5 style).\r\n",
-    "\r\n",
-    "You'll learn:\r\n",
-    "\r\n",
-    "- 🔑 How to securely load your API key  \r\n",
-    "- 📬 How to send a message to the model  \r\n",
-    "- 💬 How to print out what it says back  \r\n",
-    "\r\n",
-    "Let’s getstarted! 🚀\r\n"
+    "# 🤖 Build Your First Basic Chatbot with the OpenAI Responses API\n",
+    "\n",
+    "Welcome! In this notebook, we're going to show you how to talk to a powerful AI model using **OpenAI's Responses API**.\n",
+    "\n",
+    "This will be like texting a super-smart assistant — and we'll explain each step like you're 5 years old (ELI5 style).\n",
+    "\n",
+    "You'll learn:\n",
+    "\n",
+    "- 🔑 How to securely load your API key  \n",
+    "- 📬 How to send a message to the model  \n",
+    "- 💬 How to print out what it says back  \n",
+    "\n",
+    "Let’s get started! 🚀"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "542d3cd0-d5f9-48f2-ae9f-359bb348872f",
+   "id": "c8d73be8-5a84-4b33-8d4c-aec7d320d68d",
    "metadata": {},
    "source": [
-    "## 🔑 Step 1: Load Your API Key from `.env`\r\n",
-    "\r\n",
-    "To keep your API key safe, we don’t paste it into the notebook. Instead, we save it in a hidden `.env` file and load it from there.\r\n",
-    "\r\n",
-    "Think of the `.env` file like a secret drawer. We’re just opening the drawer and grabbing the ey.\r\n"
+    "## 📊 Models Overview"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "54862765-e95c-4fe7-aae8-beb985294ba6",
+   "id": "840375a1-9de2-405f-96da-a1ec5f2c3d97",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "API key loaded!\n"
+      "Python executable: C:\\Users\\user\\Desktop\\OpenAI-responses-api-hub\\.venv\\Scripts\\python.exe\n",
+      "Project root on path: C:\\Users\\user\\Desktop\\OpenAI-responses-api-hub\n",
+      "OpenAI client OK: True\n"
      ]
     }
    ],
    "source": [
-    "from dotenv import load_dotenv\n",
+    "# 🔧 Environment + OpenAI client check\n",
+    "\n",
     "import os\n",
+    "import sys\n",
+    "from openai import OpenAI\n",
     "\n",
-    "# 📂 Load your .env file\n",
-    "load_dotenv()\n",
+    "# Make sure the project root (parent of 'notebooks') is on sys.path\n",
+    "PROJECT_ROOT = os.path.abspath(\"..\")\n",
+    "if PROJECT_ROOT not in sys.path:\n",
+    "    sys.path.insert(0, PROJECT_ROOT)\n",
     "\n",
-    "# 🔐 Get the API key from environment variable\n",
-    "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "print(\"Python executable:\", sys.executable)\n",
+    "print(\"Project root on path:\", PROJECT_ROOT)\n",
     "\n",
-    "# ✅ Confirm we got something (but don't print the key!)\n",
-    "print(\"API key loaded!\" if api_key else \"❌ No API key found.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6cce14cc-4aa3-48bf-b482-3f793785cbdc",
-   "metadata": {},
-   "source": [
-    "## 📡 Step 2: Set Up the API Call\r\n",
-    "\r\n",
-    "Now we’re going to set up the request to OpenAI's **Responses API**.\r\n",
-    "\r\n",
-    "This is like writing a letter:\r\n",
-    "- We need the **address** (the API URL) 📫  \r\n",
-    "- We need to include our **ID card** (API key in the headers) 🪪  \r\n",
-    "- And we need to say what we want to ask (the paylad) ✍️\r\n"
+    "# Quick sanity check that the OpenAI client works\n",
+    "client = OpenAI()\n",
+    "print(\"OpenAI client OK:\", client is not None)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c4eebdb8-0b09-42ec-8e01-b4dfc32102f6",
+   "id": "b5e870a7-b59e-445a-be89-c87c57e948dd",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📦 Request setup complete!\n"
+      "Using default model: gpt-4.1-mini\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model_id</th>\n",
+       "      <th>label</th>\n",
+       "      <th>category</th>\n",
+       "      <th>notes</th>\n",
+       "      <th>available</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>gpt-4.1-mini</td>\n",
+       "      <td>Fast + cheap general</td>\n",
+       "      <td>fast</td>\n",
+       "      <td>Good default for most text tasks with Response...</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>gpt-4.1</td>\n",
+       "      <td>High quality general</td>\n",
+       "      <td>quality</td>\n",
+       "      <td>Better reasoning/writing; higher cost.</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>o4-mini</td>\n",
+       "      <td>Reasoning</td>\n",
+       "      <td>reasoning</td>\n",
+       "      <td>Use when you care about multi-step reasoning.</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>gpt-image-1</td>\n",
+       "      <td>Images</td>\n",
+       "      <td>image</td>\n",
+       "      <td>Image generation via Responses.</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       model_id                 label   category  \\\n",
+       "0  gpt-4.1-mini  Fast + cheap general       fast   \n",
+       "1       gpt-4.1  High quality general    quality   \n",
+       "2       o4-mini             Reasoning  reasoning   \n",
+       "3   gpt-image-1                Images      image   \n",
+       "\n",
+       "                                               notes  available  \n",
+       "0  Good default for most text tasks with Response...       True  \n",
+       "1             Better reasoning/writing; higher cost.       True  \n",
+       "2      Use when you care about multi-step reasoning.       True  \n",
+       "3                    Image generation via Responses.       True  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import requests\n",
+    "from utils.config import DEFAULT_MODEL\n",
+    "from utils.models import list_recommended_models\n",
+    "import pandas as pd\n",
     "\n",
-    "# 🌍 API endpoint (this is where we send the message)\n",
-    "url = \"https://api.openai.com/v1/responses\"\n",
+    "models_info = list_recommended_models()\n",
     "\n",
-    "# 🧾 Headers include your identity (API key)\n",
-    "headers = {\n",
-    "    \"Authorization\": f\"Bearer {api_key}\",\n",
-    "    \"Content-Type\": \"application/json\"\n",
-    "}\n",
+    "df_models = (\n",
+    "    pd.DataFrame.from_dict(models_info, orient=\"index\")\n",
+    "      .reset_index()\n",
+    "      .rename(columns={\"index\": \"model_id\"})\n",
+    ")\n",
     "\n",
-    "print(\"📦 Request setup complete!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "488f91b9-e825-4e42-89fe-729232df5c3c",
-   "metadata": {},
-   "source": [
-    "## ✉️ Step 3: Send a Message to the Chatbot\r\n",
-    "\r\n",
-    "Now that we have everything ready, let's send our first message!\r\n",
-    "\r\n",
-    "This is like putting our question in an envelope and mailing it to OpenAI's model.  \r\n",
-    "We'll ask something simple and fun just to test thingsout.\r\n"
+    "print(\"Using default model:\", DEFAULT_MODEL)\n",
+    "df_models"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5bb1bec0-c08f-4f47-b99a-4251561f60c3",
+   "id": "a2863b2a-87a0-4280-bdb8-e6f68b536073",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Message sent and response received!\n"
+      "Model for this notebook: gpt-4.1-mini\n"
      ]
     }
    ],
    "source": [
-    "# 🧠 The message we want to send to the model\n",
-    "prompt = \"Hi there! Can you explain what a chatbot is like I'm 5 years old?\"\n",
+    "# 🎚 Per-notebook model preference (optional)\n",
     "\n",
-    "# 📬 This is the payload (our message + model choice)\n",
-    "payload = {\n",
-    "    \"model\": \"gpt-4o\",\n",
-    "    \"input\": prompt\n",
-    "}\n",
+    "from utils.models import choose_default_model\n",
     "\n",
-    "# 🚀 Send the request to the Responses API\n",
-    "response = requests.post(url, headers=headers, json=payload)\n",
+    "# Choose one: \"fast\", \"quality\", \"reasoning\", or \"image\"\n",
+    "PREFERENCE = \"fast\"\n",
     "\n",
-    "# 📥 Save the JSON reply\n",
-    "response_json = response.json()\n",
-    "\n",
-    "print(\"✅ Message sent and response received!\")"
+    "MODEL_FOR_THIS_NOTEBOOK = choose_default_model(PREFERENCE)\n",
+    "print(\"Model for this notebook:\", MODEL_FOR_THIS_NOTEBOOK)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "468383a7-c2dc-4c6a-bcaf-39dbb2c6b6aa",
+   "id": "e5ed90fe-7d77-4d4e-88ea-f0f4d861f707",
    "metadata": {},
    "source": [
-    "## 🗣️ Step 4: Show the Chatbot's Response\r\n",
-    "\r\n",
-    "Now we’ll extract just the AI's reply from the big JSON package.\r\n",
-    "\r\n",
-    "It’s like opening the letter the chatbot sent back and reading the actual messag 📩\r\n"
+    "## 🔑 Step 1: Load Your API Key from `.env`\n",
+    "\n",
+    "To keep your API key safe, we don’t paste it into the notebook. Instead, we save it in a hidden `.env` file and load it from there.\n",
+    "\n",
+    "Think of the `.env` file like a secret drawer. We’re just opening the drawer and grabbing the key."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0de66fb5-3714-4677-9f63-2d2bcbfeddf9",
+   "id": "41810e2b-616b-401b-a9f5-c26d2818025f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking for .env at: C:\\Users\\user\\Desktop\\OpenAI-responses-api-hub\\.env\n",
+      "API key loaded! ✅\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Use PROJECT_ROOT from the setup cell\n",
+    "env_path = os.path.join(PROJECT_ROOT, \".env\")\n",
+    "print(\"Looking for .env at:\", env_path)\n",
+    "\n",
+    "load_dotenv(env_path)\n",
+    "\n",
+    "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "print(\"API key loaded! ✅\" if api_key else \"❌ No API key found. Check your .env file.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c22e2536-82f2-4ebc-a12c-0d4e20893f09",
+   "metadata": {},
+   "source": [
+    "## 📡 Step 2: Set Up the API Call\n",
+    "\n",
+    "Now we’re going to set up the request to OpenAI's **Responses API**.\n",
+    "\n",
+    "This is like writing a letter:\n",
+    "- We need the **address** (the API URL) 📫  \n",
+    "- We need to include our **ID card** (API key in the headers) 🪪  \n",
+    "- And we need to say what we want to ask (the payload) ✍️"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7ac37eb8-f080-4284-8b62-25996bdd3174",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Request setup complete!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 📬 Step 2: Set up the HTTP request to the Responses API\n",
+    "\n",
+    "import requests\n",
+    "\n",
+    "# Responses API endpoint\n",
+    "url = \"https://api.openai.com/v1/responses\"\n",
+    "\n",
+    "# Headers include your API key and content type\n",
+    "headers = {\n",
+    "    \"Authorization\": f\"Bearer {api_key}\",\n",
+    "    \"Content-Type\": \"application/json\",\n",
+    "}\n",
+    "\n",
+    "print(\"✅ Request setup complete!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67561144-ca3a-4355-b52f-90a06c682e80",
+   "metadata": {},
+   "source": [
+    "## ✉️ Step 3: Send a Message to the Chatbot\n",
+    "\n",
+    "Now that we have everything ready, let's send our first message!\n",
+    "\n",
+    "This is like putting our question in an envelope and mailing it to OpenAI's model.  \n",
+    "We'll ask something simple and fun just to test things out."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "84b77c48-1462-4769-89be-0c31fa1094c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending request with model: gpt-4.1-mini\n",
+      "HTTP status code: 200\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 💌 Step 3: Send a message to the chatbot\n",
+    "\n",
+    "# The message we want to send to the model\n",
+    "prompt = \"Hi there! Can you explain what a chatbot is like I'm 5 years old?\"\n",
+    "\n",
+    "# Payload = which model + what we want it to do\n",
+    "payload = {\n",
+    "    \"model\": MODEL_FOR_THIS_NOTEBOOK,  # comes from our model preference cell\n",
+    "    \"input\": prompt,\n",
+    "}\n",
+    "\n",
+    "print(\"Sending request with model:\", payload[\"model\"])\n",
+    "\n",
+    "# Send the request to the Responses API\n",
+    "response = requests.post(url, headers=headers, json=payload)\n",
+    "\n",
+    "print(\"HTTP status code:\", response.status_code)\n",
+    "\n",
+    "# Parse the JSON reply\n",
+    "response_json = response.json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca983b8d-a76c-4f19-82a0-53903722074f",
+   "metadata": {},
+   "source": [
+    "## 🗣️ Step 4: Show the Chatbot's Response\n",
+    "\n",
+    "Now we’ll extract just the AI's reply from the big JSON package.\n",
+    "\n",
+    "It’s like opening the letter the chatbot sent back and reading the actual message. 📩"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "649e4fe9-e6b7-4c88-86ea-88da4037f973",
    "metadata": {},
    "outputs": [
     {
@@ -174,34 +365,30 @@
      "text": [
       "🤖 Chatbot says:\n",
       "\n",
-      "Sure! Imagine a chatbot is like a friendly talking robot that lives inside a computer or a phone. You can ask it questions or tell it to do things, and it answers back with words. It’s like having a helper or a friend that talks and listens to you!\n"
+      "Hi! Sure! A chatbot is like a friendly robot you can talk to on a computer or phone. When you ask it questions or say something, it talks back to you and helps you, kind of like a pretend friend who knows lots of things!\n"
      ]
     }
    ],
    "source": [
-    "# 🧵 Follow the structure of the JSON to get the message\n",
+    "# 📨 Step 4: Show the chatbot's response\n",
+    "\n",
     "try:\n",
+    "    # Follow the Responses API JSON structure to get the text\n",
     "    output_text = response_json[\"output\"][0][\"content\"][0][\"text\"]\n",
     "    print(\"🤖 Chatbot says:\\n\")\n",
     "    print(output_text)\n",
     "except Exception as e:\n",
-    "    print(\"⚠️ Something went wrong:\", e)"
+    "    print(\"⚠️ Something went wrong while reading the response:\", e)\n",
+    "    print(\"\\nRaw JSON for debugging:\")\n",
+    "    print(response_json)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15218c9e-9377-4991-90c1-fc9ffe0529d0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python (,venv OpenAI Resonses Hub)",
    "language": "python",
-   "name": "python3"
+   "name": "openai-responses-hub"
   },
   "language_info": {
    "codemirror_mode": {
@@ -213,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
