Add Notebook 02: web search, reasoning, and custom calculator tool

--- a/notebooks/01_basic_chatbot.ipynb
+++ b/notebooks/01_basic_chatbot.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "840375a1-9de2-405f-96da-a1ec5f2c3d97",
    "metadata": {},
    "outputs": [
@@ -38,30 +38,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python executable: C:\\Users\\user\\Desktop\\OpenAI-responses-api-hub\\.venv\\Scripts\\python.exe\n",
-      "Project root on path: C:\\Users\\user\\Desktop\\OpenAI-responses-api-hub\n",
-      "OpenAI client OK: True\n"
+      "PROJECT_ROOT: C:\\Users\\user\\Desktop\\OpenAI-responses-api-hub\n",
+      "sys.path[0]: C:\\Users\\user\\Desktop\\OpenAI-responses-api-hub\n",
+      "Using repo root: C:\\Users\\user\\Desktop\\OpenAI-responses-api-hub\n"
      ]
     }
    ],
    "source": [
-    "# 🔧 Environment + OpenAI client check\n",
+    "from __future__ import annotations\n",
     "\n",
-    "import os\n",
     "import sys\n",
+    "import json\n",
+    "from pathlib import Path\n",
+    "from typing import Any, Dict, List\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
     "\n",
-    "# Make sure the project root (parent of 'notebooks') is on sys.path\n",
-    "PROJECT_ROOT = os.path.abspath(\"..\")\n",
-    "if PROJECT_ROOT not in sys.path:\n",
-    "    sys.path.insert(0, PROJECT_ROOT)\n",
+    "# --- Ensure project root is on sys.path (same pattern as Notebook 01) ---\n",
+    "PROJECT_ROOT = Path(\"..\").resolve()  # parent of notebooks/\n",
+    "if str(PROJECT_ROOT) not in sys.path:\n",
+    "    sys.path.insert(0, str(PROJECT_ROOT))\n",
     "\n",
-    "print(\"Python executable:\", sys.executable)\n",
-    "print(\"Project root on path:\", PROJECT_ROOT)\n",
+    "print(\"PROJECT_ROOT:\", PROJECT_ROOT)\n",
+    "print(\"sys.path[0]:\", sys.path[0])\n",
     "\n",
-    "# Quick sanity check that the OpenAI client works\n",
+    "from utils.openai_client import get_response  # now this should work\n",
+    "\n",
+    "# Load environment variables from .env at project root\n",
+    "load_dotenv(PROJECT_ROOT / \".env\")\n",
+    "\n",
+    "# Create an SDK client (relies on OPENAI_API_KEY)\n",
     "client = OpenAI()\n",
-    "print(\"OpenAI client OK:\", client is not None)"
+    "\n",
+    "# Treat the repo root as \".\"\n",
+    "REPO_ROOT = PROJECT_ROOT\n",
+    "print(f\"Using repo root: {REPO_ROOT}\")"
    ]
   },
   {
@@ -175,7 +187,7 @@
     ")\n",
     "\n",
     "print(\"Using default model:\", DEFAULT_MODEL)\n",
-    "df_models"
+    "df_models\n"
    ]
   },
   {
